// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoiceGroup row=false should yield single column 1`] = `
.c0 {
  display: grid;
  grid-gap: 10px;
  grid-template-columns: 1fr;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<styled.div>
  <div
    className="c0"
  />
</styled.div>
`;

exports[`ChoiceGroup row=true should yield multiple columns 1`] = `
.c0 {
  display: grid;
  grid-gap: 10px;
  grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<styled.div
  row={true}
>
  <div
    className="c0"
  />
</styled.div>
`;
